fixed navbar alignment issue

--- a/style/index.css
+++ b/style/index.css
@@ -99,7 +99,7 @@ p{
 nav{
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-start;
+	justify-content: space-between;
 	margin: 2% auto;
 }
 
@@ -131,8 +131,8 @@ a:after{
 	color: white;
 	padding: 2%;
 	font-size: 1.4rem;
-	display: flex;
-	justify-content: space-between;
+	/* display: flex;
+	justify-content: space-between; */
 }
 
 .current{
@@ -259,5 +259,8 @@ button:hover{
 	.profile-image{
 		display: flex;
 		justify-content: center;
+	}
+	nav{
+		display:
 	}
 }
